force-app/main/default/objects/adobesign__Related_Object_Child_Field_Mapping__c/fields/adobesign__Document_Tag__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Document_Tag__c</fullName>
    <label>Document Tag</label>
    <length>128</length>
    <type>Text</type>
</CustomField>