force-app/main/default/objects/adobesign__Related_Object_Child_Field_Mapping__c/fields/adobesign__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Field_Name__c</fullName>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>