force-app/main/default/objects/adobesign__Related_Object_Child_Field_Mapping__c/fields/adobesign__Index__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Index__c</fullName>
    <label>Index</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>