force-app/main/default/objects/adobesign__Related_Object_Child_Field_Mapping__c/fields/adobesign__Related_Object_Mapping__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Related_Object_Mapping__c</fullName>
    <label>Related Object Mapping</label>
    <referenceTo>adobesign__Related_Object_Mapping__c</referenceTo>
    <relationshipLabel>Child Field Mappings</relationshipLabel>
    <relationshipName>Contract_Builder_Child_Field_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>